static/css/dashboard/purchase_list.css
/* ... */
.table_product_detail_bottom ul li{
    float:left;
    width:13%;
    margin-left:5%;
    font-size:13px;
}

.table_product_detail_bottom ul li:nth-child(1) {
    width:20%;
    margin-left:22%;
}

.table_product_detail_bottom ul li button{
    background: none;
    text-align: center;
    vertical-align: middle;
}

.table_product_detail_bottom ul li .detail_bottom_btn-talk{
    background-color: #648efc;
    width:100%;
    height:30px;
    color:white;
    border:1px solid #648efc;
}

.table_product_detail_bottom ul li .review {
    background-color: white;
    width:100%;
    height:30px;
    color:grey;
    border:1px solid grey;
}

.table_product_detail_bottom ul li .repurchase {
    background-color: white;
    width:100%;
    height:30px;
    color:grey;
    border:1px solid grey;
}

.table_product_detail_bottom ul li .detail_bottom_btn {
    background-color: white;
    width:100%;
    height:30px;
    color:grey;
    border:1px solid grey;
}

/* status_table part */
.status_table{
    width:100%;
    clear:both;
    margin-top:20%;
}

.status_table table{
    width:100%;
    border-collapse: collapse;
}

.status_table table td{
    border: 1px solid #e8e8e8;
    border-spacing: 0;
}

.status_table .status_table_content{
    height:30px;
    padding-top:1%;
}

.status_table .status_table_content .status_table_title{
    display: inline-block;
    margin-left:5%;
    font-size: 12px;
    width:13%;
    height:65%;
}

.status_table .status_table_content .status_table_title div{
    width:100%;
    height:100%;
    background-color: #648efc;
    color:white;
    padding-top:7%;
    text-align: center;
}

.status_table .status_table_content .status_table_text{
    display: inline-block;
    margin-left:2%;
    font-size: 13px;
}

/* refund part */

.product_item_each_wrapper .purchase-table-ul.refund{
    width:90%;
}

.product_item_each_wrapper .purchase-table-ul.refund li:nth-child(1){
    width:13%;
}

.product_item_each_wrapper .purchase-table-ul.refund li:nth-child(2) {
    width:30%;
}

.product_item_each_wrapper .purchase-table-ul.refund li:nth-child(3) {
    width:14%;
}

.product_item_each_wrapper .purchase-table-ul.refund li:nth-child(4) {
    width:13%;
}

.product_item_each_wrapper .purchase-table-ul.refund li:nth-child(4) {
    width:13%;
}

/* transaction_details part */
.transaction_details_form{
    display: inline-block;
}

.transaction_details_btn{
    width:50px;
    height:20px;
    display: inline-block;
    font-size:10px;
    background-color: white;
    border:1px solid grey;
    border-radius:5px;
}

/* gauge part */
/* social gauge part */
#circle{
	position:relative;
  height:45px;
  width:90px;
  border-radius: 90px 90px 0 0;
  -moz-border-radius: 90px 90px 0 0;
  -webkit-border-radius: 90px 90px 0 0;
  background:green;
}

.circle-wrapper{
	width:100%;
	height:100%;
    margin-left:11%;
    margin-top:11%;
	/*background-color:grey;*/
}
/* arrow for 1 */
/*
#arrow{
	position:relative;
	left:30;
	top:90;
	transform: rotate(15deg);
}
*/
/* arrow for 2 */
/*
#arrow{
	position:relative;
	left:21%;
	top:30;
	transform: rotate(45deg);
}
*/
/* arrow for 3 */
/*
#arrow{
	position:relative;
	left:45%;
	top:0;
	transform: rotate(90deg);
}
*/
/* arrow for 4 */
/*
#arrow{
	position:relative;
	left:70%;
	top:30;
	transform: rotate(135deg);
}
*/
/* arrow for 5 */
/*
.circle-arrow{
	position:relative;
	left:10%;
	top:3.5em;
	transform: rotate(160deg);
}
*/
/* default arrow */

.circle-arrow{
	position:relative;
    display: inherit;
	left:0;
	top:0;
    width:10%;
	/*transform: rotate(160deg);*/
}
/*
*/
/* ul tag circle */
.circle {
  position: relative;
  /*border: 1px solid black;*/
  padding: 0;
  /*margin: 1em auto;*/
  /*margin: 1em 1em 0 3em;*/
	margin-left:8%;
  width: 100px;
  height: 50px;
  border-radius: 100px 100px 0 0;
  list-style: none;
  overflow: hidden;
}
.circle-list {
  overflow: hidden;
  position: absolute;
  top: 0;
  right: 0;
  width: 50px;
  height: 50px;
  transform-origin: 0% 100%;
}
.circle-text {
  position: absolute;
  left: -100%;
  width: 100px;
  height: 100px;
  text-align: center;
  transform: skewY(36deg) rotate(18deg);
  padding-top: 4%;
  border-radius: 90px 90px 0 0;
  -moz-border-radius: 90px 90px 0 0;
  -webkit-border-radius: 90px 90px 0 0;
    font-size:12px;
}
.circle-list:first-child {
  transform: rotate(270deg) skewY(-36deg);
}
.circle-list:nth-child(2) {
  transform: rotate(306deg) skewY(-36deg);
}
.circle-list:nth-child(3) {
  transform: rotate(342deg) skewY(-36deg);
}
.circle-list:nth-child(4) {
  transform: rotate(18deg) skewY(-36deg);
}
.circle-list:nth-child(5) {
  transform: rotate(54deg) skewY(-36deg);
}
li:first-child .circle-text {
	color:black;
    background: #cecece;
}
li:nth-child(2) .circle-text {
	color:black;
    background: #cecece;
}
li:nth-child(3) .circle-text {
	color:black;
    background: #cecece;
}
li:nth-child(4) .circle-text {
	color:black;
    background: #cecece;
}
li:nth-child(5) .circle-text {
	color:black;
    background: #cecece;
}
.circle-mask2{
	position:absolute;
	bottom:0;
	left:17%;
    height:66%;
    width:66%;
    text-align:center;
    margin-top:2em;
    border-radius: 200px 200px 0 0;
    -moz-border-radius: 200px 200px 0 0;
    -webkit-border-radius: 200px 200px 0 0;
    background:white;
	z-index:3;
}
.circle-mask2-text{
  padding-top:10px;
}

.cash{
  position:relative;
  width:75%;
    height: 7%;
  padding-top:3%;
  border:1px solid grey;
  border-radius:15px;
  text-align:center;
}

/* rating part */

.review_modal{
    display: none;
    float:left;
    position:absolute;
    left:36%;
    top:15%;
    background: white;
    border: 1px solid black;
    width:34%;
    height:500px;
    text-align:center;
    z-index:10;
}

.review_modal .review_form{
    height:100%;
    width:100%;
}

.review_modal .review_form_title{
    width:100%;
    background-color: #648efc;
    color:white;
    height:8%;
    padding-top:6%;
}
/* ... */

